@@ -35,9 +35,9 @@ AC_PROG_RANLIB
 
 RTEMS_CHECK_NEWLIB
 
-RTEMS_CHECK_MULTIPROCESSING(RTEMS_BSP)
-RTEMS_CHECK_POSIX_API(RTEMS_BSP)
-RTEMS_CHECK_ITRON_API(RTEMS_BSP)
+RTEMS_CHECK_MULTIPROCESSING
+RTEMS_CHECK_POSIX_API
+RTEMS_CHECK_ITRON_API
 RTEMS_CHECK_NETWORKING
 
 # If RTEMS macros are enabled, then use them.  Otherwise, use inlines.
